--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">InfoAndroid-v2</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="dispositivo">ID: </string>
+    <string name="bateria">Nível de bateria: </string>
+    <string name="lat">Latitude: </string>
+    <string name="longi">Longitude: </string>
+    <string name="operadora">Operadora: </string>
+    <string name="sinal">Nível de sinal: </string>
+    <string name="antena_id">ID Antena: </string>
+    <string name="lac">Location Area Code(LAC): </string>
+    <string name="bt_atualizar">Atualizar</string>
 
 </resources>
